This is no bug,
but simply due to the way MAF represents negative strand alignments. Added solution and adding initial solution as a separate branch.

--- a/BugTracer.ipynb
+++ b/BugTracer.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This demonstrates the behaviour of bx-python's MAF index for positions in alignment blocks on the negative strand and how I dealt with them...See [MAF format description](https://genome.ucsc.edu/FAQ/FAQformat.html#format5) about how strand and start cooridinates for more details.\n",
+    "\n",
+    "\n",
+    "I initially filed and [issue](https://github.com/bxlab/bx-python/issues/61) with bx-python because I was unaware of MAFs representation of `-` strand alignments. See [initial version](https://github.com/dandaman/bxmafissue/blob/Initial/BugTracer.ipynb) of  this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +49,6 @@
      "output_type": "stream",
      "text": [
       "This should result in a block containing position: 570\n",
-      "But it results in this position 128\n",
-      "From this block\n",
       "a score=0\n",
       "s Anc0.Anc0refChr2144 14846 12 + 17066 GCTGAAGTTGTC\n",
       "s Anc1.Anc1refChr1976 23952 12 + 26847 GCTGAAGTTGGC\n",
@@ -52,9 +60,20 @@
       "s FV.Fvb2 2336068 12 + 29351230 GCTGGAGTTGTA\n",
       "s RO.Ro02 1603951 10 - 40759723 GCTGAA--TGTA\n",
       "\n",
-      "This should result in a block containing position: 124\n",
-      "But it results in this position 574\n",
+      "And after revcomplementing it results in this position 570\n",
       "From this block\n",
+      "a score=0\n",
+      "s Anc0.Anc0refChr2144 2208 12 - 17066 GACAACTTCAGC\n",
+      "s Anc1.Anc1refChr1976 2883 12 - 26847 GCCAACTTCAGC\n",
+      "s Anc3.Anc3refChr8849 16670 12 + 42005 GACAAATTCAGT\n",
+      "s PT.PT1S09221 569 12 + 698 GCCAACTTCAGC\n",
+      "s DO.DO1S00272 193024 12 + 254284 GACAAATTCAGT\n",
+      "s DD.DD1S00008 104403 12 + 3402286 GACAAATTCAGT\n",
+      "s Anc2.Anc2refChr10093 836 12 - 7355 TACAACTTCAGC\n",
+      "s FV.Fvb2 27015150 12 - 29351230 TACAACTCCAGC\n",
+      "s RO.Ro02 39155762 10 + 40759723 TACA--TTCAGC\n",
+      "\n",
+      "This should result in a block containing position: 124\n",
       "a score=0\n",
       "s Anc0.Anc0refChr2144 14900 6 + 17066 GACTGG\n",
       "s Anc1.Anc1refChr1976 24021 6 + 26847 GACTGG\n",
@@ -66,9 +85,20 @@
       "s FV.Fvb2 2336144 3 + 29351230 --TTT-\n",
       "s RO.Ro02 1604036 6 - 40759723 GGTTGG\n",
       "\n",
-      "This should result in a block containing position: 569\n",
-      "But it results in this position 126\n",
+      "And after revcomplementing it results in this position 124\n",
       "From this block\n",
+      "a score=0\n",
+      "s Anc0.Anc0refChr2144 2160 6 - 17066 CCAGTC\n",
+      "s Anc1.Anc1refChr1976 2820 6 - 26847 CCAGTC\n",
+      "s Anc3.Anc3refChr8849 16613 6 + 42005 CCAACC\n",
+      "s PT.PT1S09221 123 6 + 698 CCAGTC\n",
+      "s DO.DO1S00272 192967 6 + 254284 CCAACC\n",
+      "s DD.DD1S00008 104346 6 + 3402286 CCAACC\n",
+      "s Anc2.Anc2refChr10093 770 6 - 7355 CCAACC\n",
+      "s FV.Fvb2 27015083 3 - 29351230 -AAA--\n",
+      "s RO.Ro02 39155681 6 + 40759723 CCAACC\n",
+      "\n",
+      "This should result in a block containing position: 569\n",
       "a score=0\n",
       "s Anc0.Anc0refChr2144 14846 12 + 17066 GCTGAAGTTGTC\n",
       "s Anc1.Anc1refChr1976 23952 12 + 26847 GCTGAAGTTGGC\n",
@@ -79,6 +109,19 @@
       "s Anc2.Anc2refChr10093 6507 12 + 7355 GCTGAAGTTGTA\n",
       "s FV.Fvb2 2336068 12 + 29351230 GCTGGAGTTGTA\n",
       "s RO.Ro02 1603951 10 - 40759723 GCTGAA--TGTA\n",
+      "\n",
+      "And after revcomplementing it results in this position 569\n",
+      "From this block\n",
+      "a score=0\n",
+      "s Anc0.Anc0refChr2144 2208 12 - 17066 GACAACTTCAGC\n",
+      "s Anc1.Anc1refChr1976 2883 12 - 26847 GCCAACTTCAGC\n",
+      "s Anc3.Anc3refChr8849 16670 12 + 42005 GACAAATTCAGT\n",
+      "s PT.PT1S09221 569 12 + 698 GCCAACTTCAGC\n",
+      "s DO.DO1S00272 193024 12 + 254284 GACAAATTCAGT\n",
+      "s DD.DD1S00008 104403 12 + 3402286 GACAAATTCAGT\n",
+      "s Anc2.Anc2refChr10093 836 12 - 7355 TACAACTTCAGC\n",
+      "s FV.Fvb2 27015150 12 - 29351230 TACAACTCCAGC\n",
+      "s RO.Ro02 39155762 10 + 40759723 TACA--TTCAGC\n",
       "\n"
      ]
     }
@@ -87,10 +130,16 @@
     "for i,n in enumerate(starts):\n",
     "    print(\"This should result in a block containing position: %i\" % starts[i])\n",
     "    for align in index.get(region, starts[i],ends[i]):\n",
+    "        print(align)\n",
+    "        strand=\"+\"\n",
+    "        for x in align.get_components_by_src(region):\n",
+    "            if x.src== region and x.strand == '-':\n",
+    "                align=align.reverse_complement()\n",
+    "                break\n",
     "        region_align = align.slice_by_component(region, starts[i],ends[i])\n",
     "        for component in region_align.components:\n",
     "            if component.src == region:\n",
-    "                print(\"But it results in this position %i\" % (component.start+1))\n",
+    "                print(\"And after revcomplementing it results in this position %i\" % (component.start))\n",
     "                print(\"From this block\")\n",
     "                print(align)"
    ]
